SERVER-74097 Populate `CollectionUUIDMismatch` via `listCollections` for sharded find

(cherry picked from commit 4c670108b0aa1f5903ddb0c4e74ab0cee518b151)